GearsetPOC/force-app/main/default/objects/Invoice_CostCentre__c/Invoice_CostCentre__c.object-meta.xml
<CustomObject>
    <description>For Invoice Request</description>
    <label>Invoice_CostCentre</label>
    <nameField>
        <displayFormat>CC{000000}</displayFormat>
        <label>CodeCombinationId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice_CostCentres</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>