GearsetPOC/force-app/main/default/objects/Invoice_CostCentre__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <length>1</length>
    <type>Text</type>
</CustomField>