GearsetPOC/force-app/main/default/objects/Invoice_CostCentre__c/fields/CodeCombination__c.field-meta.xml
<CustomField>
    <fullName>CodeCombination__c</fullName>
    <label>Counter Party</label>
    <length>10</length>
    <type>Text</type>
</CustomField>