GearsetPOC/force-app/main/default/objects/Invoice_CostCentre__c/fields/OracleIdentifier__c.field-meta.xml
<CustomField>
    <fullName>OracleIdentifier__c</fullName>
    <externalId>true</externalId>
    <label>OracleIdentifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>