GearsetPOC/force-app/main/default/objects/Invoice_CostCentre__c/fields/ProjectCode__c.field-meta.xml
<CustomField>
    <fullName>ProjectCode__c</fullName>
    <label>ProjectCode</label>
    <length>15</length>
    <type>Text</type>
</CustomField>