GearsetPOC/force-app/main/default/objects/Invoice_CostCentre__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CostCentre__c</columns>
    <columns>CodeCombination__c</columns>
    <columns>OracleIdentifier__c</columns>
    <columns>ProjectCode__c</columns>
    <columns>Active__c</columns>
    <columns>AccountCode__c</columns>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>